Adding nth-child-of-type